WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39009
[Qt] QtClass uses non-threadsafe APIs
https://bugs.webkit.org/show_bug.cgi?id=39009
Summary
[Qt] QtClass uses non-threadsafe APIs
Anders Bakken
Reported
2010-05-12 11:42:02 PDT
Identifier::ascii() is not threadsafe and shouldn't be used for converting to and from QString/QByteArray. Also included are some minor optimizations that makes it use const & instead of copying const QList<QObject*>& QObject::children()
Attachments
A patch that fixes the issues
(6.36 KB, patch)
2010-05-12 11:44 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.73 KB, patch)
2010-05-15 17:53 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-12 11:44:14 PDT
Created
attachment 55878
[details]
A patch that fixes the issues
Jesus Sanchez-Palencia
Comment 2
2010-05-13 07:04:20 PDT
(In reply to
comment #1
)
> Created an attachment (id=55878) [details] > A patch that fixes the issues
Did you forget to mark it for review?! :) I'm doing the bug triaging this week, so just some quick tips for you when opening your next bug reports: - please add the 'Qt' Keyword; - if the bug is Qt specific add a '[Qt]' to the Summary; Thanks!
Anders Bakken
Comment 3
2010-05-13 07:42:37 PDT
Hi Jesus I did mean to mark it for review. Thanks. I'll try to remember that. I've been slightly confused about what to put in those combobboxes.
Kenneth Rohde Christiansen
Comment 4
2010-05-13 07:44:33 PDT
put r? (== I request review) and cq? (== I request automatically commit after reviewed positively using the commut-queue)
Kenneth Rohde Christiansen
Comment 5
2010-05-13 07:48:19 PDT
Comment on
attachment 55878
[details]
A patch that fixes the issues In the future please add the title of the bug as well.
Anders Bakken
Comment 6
2010-05-13 08:31:52 PDT
(In reply to
comment #5
)
> (From update of
attachment 55878
[details]
) > In the future please add the title of the bug as well.
Uh. Where do I put the title?
Kenneth Rohde Christiansen
Comment 7
2010-05-13 09:40:40 PDT
In the changelog you add title of the bug <- here
http://webkit.org/b/bugid
description...
WebKit Commit Bot
Comment 8
2010-05-14 18:32:11 PDT
Comment on
attachment 55878
[details]
A patch that fixes the issues Rejecting patch 55878 from commit-queue. Unexpected failure when landing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 55878, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Logging in as
eseidel@chromium.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=55878&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=39009
&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 55878 from
bug 39009
. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Kenneth Rohde Christiansen
Comment 9
2010-05-15 12:33:03 PDT
Anders, you cannot remove the "Reviewed by NOBODY (OOPS!!)". If you do that we cannot land using the commit-queue. It has to be exactly like the prepare-ChangeLog scripts writes it. Now you can reupload the patch with this fixed and reset r? and cq? -- or -- You can upload the patch with "Reviewed by Kenneth Rohde Christiansen" and just set cq? The latter is preferred as anyone with committer-rights can change the cq? to cq+ Another option would be to get someone to land it manually using webkit-patch or similar.
Adam Barth
Comment 10
2010-05-15 17:53:32 PDT
Created
attachment 56166
[details]
Patch for landing
Adam Barth
Comment 11
2010-05-15 17:53:53 PDT
Also, we don't allow tabs in ChangeLogs.
WebKit Commit Bot
Comment 12
2010-05-15 19:34:18 PDT
Comment on
attachment 56166
[details]
Patch for landing Clearing flags on attachment: 56166 Committed
r59562
: <
http://trac.webkit.org/changeset/59562
>
WebKit Commit Bot
Comment 13
2010-05-15 19:34:24 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 14
2010-05-15 20:47:13 PDT
http://trac.webkit.org/changeset/59562
might have broken GTK Linux 64-bit Debug The following changes are on the blame list:
http://trac.webkit.org/changeset/59561
http://trac.webkit.org/changeset/59562
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug