2010-05-15  Anders Bakken  <agbakken@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Identifier::ascii() is not threadsafe and shouldn't be used for
        converting to and from QString/QByteArray.

        https://bugs.webkit.org/show_bug.cgi?id=39009

        * bridge/qt/qt_class.cpp:
        (JSC::Bindings::QtClass::fallbackObject):
        (JSC::Bindings::QtClass::fieldNamed):

Canonical link: https://commits.webkit.org/50702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59562 268f45cc-cd09-0410-ab3c-d52691b4dbfc